tests/typerel/ttypelessemptyset.nim
discard """
  errormsg: "internal error: invalid kind for lastOrd(tyEmpty)"
"""
var q = false
discard (if q: {} else: {})

